--- a/src/VisGeek.Apps.OfficeLineArt.VisioLineArt/VisGeek.Apps.OfficeLineArt.VisioLineArt.csproj
+++ b/src/VisGeek.Apps.OfficeLineArt.VisioLineArt/VisGeek.Apps.OfficeLineArt.VisioLineArt.csproj
@@ -165,8 +165,8 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="VisioExtensions.cs" />
-    <Compile Include="VisioLineArt.cs" />
+    <Compile Include="ExtensionsMethods.cs" />
+    <Compile Include="LineArt.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
