--- a/src/VisGeek.Apps.OfficeLineArt/VisGeek.Apps.OfficeLineArt.csproj
+++ b/src/VisGeek.Apps.OfficeLineArt/VisGeek.Apps.OfficeLineArt.csproj
@@ -48,7 +48,6 @@
     <Reference Include="Microsoft.Office.Tools.Common.v4.0.Utilities, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -60,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Apex.cs" />
     <Compile Include="ApexCollection.cs" />
+    <Compile Include="Color.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Field.cs" />
