--- a/src/VisGeek.Apps.OfficeLineArt/VisGeek.Apps.OfficeLineArt.csproj
+++ b/src/VisGeek.Apps.OfficeLineArt/VisGeek.Apps.OfficeLineArt.csproj
@@ -67,8 +67,8 @@
     <Compile Include="LineArt.cs" />
     <Compile Include="LineCollection.cs" />
     <Compile Include="Point.cs" />
-    <Compile Include="Porigon.cs" />
-    <Compile Include="PorigonCollection.cs" />
+    <Compile Include="Polygon.cs" />
+    <Compile Include="PolygonCollection.cs" />
     <Compile Include="PositionInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rectangle.cs" />
