Color クラスと透過度を分けた。

--- a/src/VisGeek.Apps.OfficeLineArt/VisGeek.Apps.OfficeLineArt.csproj
+++ b/src/VisGeek.Apps.OfficeLineArt/VisGeek.Apps.OfficeLineArt.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Apex.cs" />
     <Compile Include="ApexCollection.cs" />
+    <Compile Include="CollectionBase.cs" />
     <Compile Include="Color.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="ExtensionMethods.cs" />
