オフィス版もバックグラウンド処理にした。

--- a/src/VisGeek.Apps.OfficeLineArt.ExcelLineArt/VisGeek.Apps.OfficeLineArt.ExcelLineArt.csproj
+++ b/src/VisGeek.Apps.OfficeLineArt.ExcelLineArt/VisGeek.Apps.OfficeLineArt.ExcelLineArt.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Ribbon.Designer.cs">
       <DependentUpon>Ribbon.cs</DependentUpon>
     </Compile>
+    <Compile Include="RibbonDesigner.cs" />
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
     </Compile>
