--- a/src/VisGeek.Apps.OfficeLineArt.Ribbon/VisGeek.Apps.OfficeLineArt.Ribbon.csproj
+++ b/src/VisGeek.Apps.OfficeLineArt.Ribbon/VisGeek.Apps.OfficeLineArt.Ribbon.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="LineArt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RibbonCoponentSuspender.cs" />
     <Compile Include="RibbonDesigner.cs" />
   </ItemGroup>
   <ItemGroup>
