--- a/src/VisGeek.Apps.OfficeLineArt.VisioLineArt/VisGeek.Apps.OfficeLineArt.VisioLineArt.csproj
+++ b/src/VisGeek.Apps.OfficeLineArt.VisioLineArt/VisGeek.Apps.OfficeLineArt.VisioLineArt.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Ribbon.Designer.cs">
       <DependentUpon>Ribbon.cs</DependentUpon>
     </Compile>
+    <Compile Include="RibbonDesigner.cs" />
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
     </Compile>
