--- a/src/VisGeek.Apps.OfficeLineArt/VisGeek.Apps.OfficeLineArt.csproj
+++ b/src/VisGeek.Apps.OfficeLineArt/VisGeek.Apps.OfficeLineArt.csproj
@@ -51,6 +51,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CancelableTask.cs" />
     <Compile Include="Model\Apex.cs" />
     <Compile Include="Model\ApexCollection.cs" />
     <Compile Include="CollectionBase.cs" />
